# Programming-Languages-and-Paradigms

./: .gitignore  README.md
lab0/: README.md
lab0/Ada/: hello.adb
lab0/C/: main.c
lab0/Haskel/: hello.hs
lab0/Prolog/: hello.pl
lab0/Standard ML/: hello.sml
lab1/: README.md
lab1/Ada/: functions.ads  functions_loop.adb  functions_loop.gpr  functions_recursion.adb  functions_recursion.gpr  functions_test  functions_test.adb  functions_test.gpr  run.sh
lab1/AdaToCWrapper/: ada_wrapper.h  config.sh  functions_c_api.ads  functions_loop_c_api.adb  functions_recursion_c_api.adb  test_ada_wrapper.c
lab1/C/: config.sh  func_iterative.c  func_recursive.c  func_test.c
lab1/CToAdaWrapper/: c_wrapper.ads  config.sh  func.h  test_c_wrapper  test_c_wrapper.adb
lab1/CToPythonWrapper/: test_c_wrapper.py
lab1/CToPythonWrapper/functions_c/: iterative.py  recursive.py
lab1/Python/: functions_iterative.py  functions_recursive.py  functions_test.py
lab1/PythonToCWrapper/: config.sh  python_wrapper.c  python_wrapper.h  test.c  test_wrapper
lab2/: README.md
lab2/C++/: CMakeLists.txt
lab2/C++/inc/: Galois.hpp  Galois.inl
lab2/C++/src/: main.cpp
lab2/C++/test/: galoisTest.cpp
lab2/Java/: Galois.java  GaloisInterface.java  Main.java  OrderMismatchException.java
lab2/Java/Exceptions/: OrderMismatchException.java  PrimeMismatchException.java
lab2/Python/: Galois.py  main.py
lab3/: README.md
lab3/C++/: CMakeLists.txt
lab3/C++/inc/: DHSetup.hpp  User.hpp
lab3/C++/src/: main.cpp
lab3/Java/: DHSetup.java  Main.java  User.java
lab3/Java/Exceptions/: GeneratorNotFoundException.java  KeyNotSetException.java
lab3/Python/: DHSetup.py  User.py  main.py
lab4/: README.md
lab4/Ada/: Dining_philosophers.gpr
lab4/Ada/src/: main.adb
lab4/C/: Makefile
lab4/C/inc/: diningPhilosophers.h
lab4/C/src/: diningPhilosophers.c  main.c
lab4/Go/: diningPhilosophers.go  go.mod  main.go
lab5/: README.md
lab5/Haskell/: math.hs
lab5/Lisp/: math.lisp
lab5/Prolog/: math.pl
lab5/SML/: math.sml
